--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@seagull-js/seagull": "^0.2.0",
-    "inferno-mobx": "^3.9.0",
-    "mobx": "^3.2.2"
+    "@seagull-js/seagull": "^0.2.1"
   },
   "devDependencies": {
     "@types/chai": "^4.0.4",
