--- a/package.json
+++ b/package.json
@@ -11,11 +11,22 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@seagull-js/seagull": "^0.2.1"
+    "@seagull-js/seagull": "^0.2.1",
+    "mobx": "^3.3.0",
+    "mobx-react": "^4.3.2",
+    "mobx-react-router": "^4.0.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-router": "^4.2.0",
+    "react-router-config": "^1.0.0-beta.4",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "@types/chai": "^4.0.4",
+    "@types/history": "^4.6.0",
     "@types/mocha": "^2.2.42",
-    "@types/node": "^8.0.25"
+    "@types/node": "^8.0.25",
+    "@types/react": "^16.0.7",
+    "@types/react-dom": "^15.5.5"
   }
 }
