--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
     "rootDir": "./",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "jsx": "react",
-    "jsxFactory": "createElement"
+    "jsx": "react"
+    // "jsxFactory": "createElement"
   },
   "include": [
       "api/**/*",
