--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@seagull-js/seagull": "^0.2.1",
-    "mobx": "^3.3.0",
-    "mobx-react": "^4.3.2",
+    "mobx": "^3.3.1",
+    "mobx-react": "^4.3.3",
     "mobx-react-router": "^4.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -26,7 +26,10 @@
     "@types/history": "^4.6.0",
     "@types/mocha": "^2.2.42",
     "@types/node": "^8.0.25",
-    "@types/react": "^16.0.7",
-    "@types/react-dom": "^15.5.5"
+    "@types/react": "^16.0.10",
+    "@types/react-dom": "^16.0.1",
+    "@types/react-router": "^4.0.15",
+    "@types/react-router-config": "^1.0.4",
+    "@types/react-router-dom": "^4.0.8"
   }
 }
