updated to new cli/js version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,9 @@
     // "jsxFactory": "createElement"
   },
   "include": [
-      "api/**/*",
       "frontend/**/*",
+      "backend/**/*",
+      "models/**/*",
       "test/**/*"
   ],
   "lib": [ "es5", "es6", "es7", "dom", "dom.iterable" ],
