--- a/package.json
+++ b/package.json
@@ -11,25 +11,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@seagull-js/seagull": "^0.4.7",
-    "mobx": "^3.3.1",
-    "mobx-react": "^4.3.3",
-    "mobx-react-router": "^4.0.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-router": "^4.2.0",
-    "react-router-config": "^1.0.0-beta.4",
-    "react-router-dom": "^4.2.2"
+    "@seagull-js/seagull": "^0.5.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.0.4",
-    "@types/history": "^4.6.0",
-    "@types/mocha": "^2.2.42",
-    "@types/node": "^8.0.25",
-    "@types/react": "^16.0.10",
-    "@types/react-dom": "^16.0.1",
-    "@types/react-router": "^4.0.15",
-    "@types/react-router-config": "^1.0.4",
-    "@types/react-router-dom": "^4.0.8"
   }
 }
