--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "todos",
-  "version": "0.1.0",
-  "description": "my new seagull app",
-  "main": "src/index.ts",
-  "engines": {
-    "node": ">= 6.10.3 < 7"
-  },
-  "engineStrict": true,
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "@seagull-js/seagull": "^0.5.1"
-  },
-  "devDependencies": {
-  }
+    "name": "todos",
+    "version": "0.1.0",
+    "description": "my new seagull app",
+    "main": "src/index.ts",
+    "engines": {
+        "node": ">= 6.10.3 < 7"
+    },
+    "engineStrict": true,
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "dependencies": {
+        "@seagull-js/seagull": "0.5.7"
+    },
+    "devDependencies": {}
 }
