--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
-        "@seagull-js/seagull": "0.5.7"
+        "@seagull/core": "0.5.11"
     },
     "devDependencies": {}
 }
